--- a/web/page2.html
+++ b/web/page2.html
@@ -15,8 +15,20 @@
             background-color: #f0f0f0;
         }
 
-        h1 {
-            justify-content: flex;            
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        .text {
+            font-size: 24px;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 20px; /* Espacio entre el texto y las imágenes */
+            text-align: center;
         }
 
         .grid-container {
@@ -52,30 +64,31 @@
 
 
 <body>
-    
-    <div class="grid-container">
-        <!-- Cada imagen dentro de un enlace -->
-        <div class="grid-item">
-            <a href="pagina1.html" id="choice1">
-                <img src="images/2571142.webp" alt="Imagen 1">
-            </a>
+    <div class="container">
+        <div class="text">Which product would you want to return?</div>
+        <div class="grid-container">
+            <!-- Cada imagen dentro de un enlace -->
+            <div class="grid-item">
+                <a href="pagina1.html" id="choice1">
+                    <img src="images/2571142.webp" alt="Imagen 1">
+                </a>
+            </div>
+            <div class="grid-item" >
+                <a href="pagina2.html" id="choice2">
+                    <img src="images/adidas_391303_IR3261_20231101T145235_01.jpg" alt="Imagen 2">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="pagina3.html" id="choice3">
+                    <img src="images/Gorra_Cotton_Twill_Baseball_3_bandas_Negro_IB3242_01_standard.avif" alt="Imagen 3">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="pagina4.html" id="choice4">
+                    <img src="images/Zapatilla_Superstar_Blanco_EG4958_01_standard.avif" alt="Imagen 4">
+                </a>
+            </div>
         </div>
-        <div class="grid-item" >
-            <a href="pagina2.html" id="choice2">
-                <img src="images/adidas_391303_IR3261_20231101T145235_01.jpg" alt="Imagen 2">
-            </a>
-        </div>
-        <div class="grid-item">
-            <a href="pagina3.html" id="choice3">
-                <img src="images/Gorra_Cotton_Twill_Baseball_3_bandas_Negro_IB3242_01_standard.avif" alt="Imagen 3">
-            </a>
-        </div>
-        <div class="grid-item">
-            <a href="pagina4.html" id="choice4">
-                <img src="images/Zapatilla_Superstar_Blanco_EG4958_01_standard.avif" alt="Imagen 4">
-            </a>
-        </div>
-        
     </div>
 
 </body>
