--- a/web/page2.html
+++ b/web/page2.html
@@ -69,22 +69,22 @@
         <div class="grid-container">
             <!-- Cada imagen dentro de un enlace -->
             <div class="grid-item">
-                <a href="pagina1.html" id="choice1">
+                <a href="page3.html" id="choice1">
                     <img src="images/2571142.webp" alt="Imagen 1">
                 </a>
             </div>
             <div class="grid-item" >
-                <a href="pagina2.html" id="choice2">
+                <a href="page3.html" id="choice2">
                     <img src="images/adidas_391303_IR3261_20231101T145235_01.jpg" alt="Imagen 2">
                 </a>
             </div>
             <div class="grid-item">
-                <a href="pagina3.html" id="choice3">
+                <a href="page3.html" id="choice3">
                     <img src="images/Gorra_Cotton_Twill_Baseball_3_bandas_Negro_IB3242_01_standard.avif" alt="Imagen 3">
                 </a>
             </div>
             <div class="grid-item">
-                <a href="pagina4.html" id="choice4">
+                <a href="page3.html" id="choice4">
                     <img src="images/Zapatilla_Superstar_Blanco_EG4958_01_standard.avif" alt="Imagen 4">
                 </a>
             </div>
