--- a/web/index.html
+++ b/web/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!DOCTSendYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inici | Test Phishing</title>
+    <title>Return process</title>
     <link rel="stylesheet" href="style.css"> 
     <script src="https://kit.fontawesome.com/e1583dbefb.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
-            <h1>Test Phishing</h1>
+            <h1></h1>
             <h3>Test per a comprovar si pots distinguir atacs phishing</h3>
             <br>
             <br>
