--- a/web/page3.html
+++ b/web/page3.html
@@ -61,24 +61,24 @@
 <body>
 
     <div class="container">
-        <h1>Formulario de Devolución de Producto</h1>
+        <h1>Product return form</h1>
         
         <form action="#" method="post">
-            <label for="motivo"><strong>Selecciona el motivo de la devolución:</strong></label>
+            <label for="motivo"><strong>Select the motive of your return:</strong></label>
             <select id="motivo" name="motivo" onchange="mostrarOtroMotivo()">
-                <option value="producto_incorrecto">Producto incorrecto</option>
-                <option value="producto_danado">Producto dañado</option>
-                <option value="descripcion_incorrecta">No describe con la descripción</option>
-                <option value="otro">Otro...</option>
+                <option value="producto_incorrecto">They shipped me the wrong product</option>
+                <option value="producto_danado">It came broken/It malfunctioned</option>
+                <option value="descripcion_incorrecta">It does not resemble what I bought</option>
+                <option value="otro">Other...</option>
             </select>
 
             <!-- Campo de texto para "Otro..." motivo -->
             <div id="otrosMotivo" class="other-input">
-                <label for="otroMotivo">Escribe el motivo de la devolución:</label>
+                <label for="otroMotivo">Select the motive of your return:</label>
                 <textarea id="otroMotivo" name="otroMotivo" rows="4"></textarea>
             </div>
 
-            <button type="submit">Enviar</button>
+            <button type="submit">Send</button>
         </form>
     </div>
 
