--- a/web/index.html
+++ b/web/index.html
@@ -1,25 +1,38 @@
-<!DOCTSendYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Return process</title>
-    <link rel="stylesheet" href="style.css"> 
-    <script src="https://kit.fontawesome.com/e1583dbefb.js" crossorigin="anonymous"></script>
+    <title>Pagina Principal</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
+            background-color: #f0f0f0;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div id="home" class="flex-column flex-center">
-            <h1></h1>
-            <h3>Test per a comprovar si pots distinguir atacs phishing</h3>
-            <br>
-            <br>
-            <br>
-            <a href="advice.html" id="advice-btn" class="btn">Consells <i class="fa-solid fa-question"></i></a>
-            <a href="game.html" class="btn">Respon <i class="fa-solid fa-check"></i></a>
-            
-        </div>
-    </div>
+
+    <h1>Return process portal</h1>
+    <button onclick="window.location.href='page2.html'">Continuar skibidi</button>
+
 </body>
 </html>
