--- a/web/page4.html
+++ b/web/page4.html
@@ -24,21 +24,21 @@
         }
 
         .button-primary {
-            background: linear-gradient(135deg, #ff7eb3, #ff758c);
+            background: linear-gradient(135deg, #7eb2ff, #7159f8);
             color: white;
             border: none;
             border-radius: 12px;
             padding: 20px 40px;
-            font-size: 1.5rem;
+            font-size: 2.5rem;
             cursor: pointer;
-            box-shadow: 0 0 20px 4px rgba(255, 117, 140, 0.6);
+            box-shadow: 0 0 20px 4px rgba(21, 24, 209, 0.6);
             outline: none;
             transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
 
         .button-primary:hover {
             transform: scale(1.05);
-            box-shadow: 0 0 30px 8px rgba(255, 117, 140, 0.8);
+            box-shadow: 0 0 30px 8px rgba(18, 179, 201, 0.8);
         }
 
         .button-secondary {
@@ -59,9 +59,13 @@
     </style>
 </head>
 <body>
-    <header>Header Text Here</header>
-    <button class="button-primary">Primary Button</button>
-    <button class="button-secondary">Secondary Button</button>
+    <header>We're really sorry</header>
+    <br>
+    <h3>Play a short game to earn more store credit</h3>
+    <br>
+    <button class="button-primary">Game&Win</button>
+    <br>
+    <button class="button-secondary">Skip</button>
 </body>
 </html>
 
