--- a/web/page4.html
+++ b/web/page4.html
@@ -59,13 +59,13 @@
     </style>
 </head>
 <body>
-    <header>We're really sorry</header>
+    <header>We're really sorry for your bad experience</header>
     <br>
     <h3>Play a short game to earn more store credit</h3>
     <br>
-    <button class="button-primary">Game&Win</button>
+    <button class="button-primary" onclick="window.location.href='pruebaJS/index.html'">Game&Win</button>
     <br>
-    <button class="button-secondary">Skip</button>
+    <button class="button-secondary" onclick="window.location.href='page5.html'">Skip</button>
 </body>
 </html>
 
