--- a/web/gameparkour.html
+++ b/web/gameparkour.html
@@ -96,13 +96,13 @@
             
 
             <!-- Create the canvas element the game draws to -->
-            <canvas id="canvas" width="960" height="540" >
+            <canvas id="canvas" width="960" height="540" style="position: absolute; top: 50%; left: 50%; bottom: -50%; right: -50%; transform: translate(-50%, -50%);">
                 <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/IsometricFull.js?cachebust=1899073688"></script>
+        <script type="text/javascript" src="html5game/IsometricFull.js?cachebust=540628375"></script>
 
         <!-- Builtin injector for injecting runner path -->
         
