--- a/web/page4.html
+++ b/web/page4.html
@@ -59,11 +59,11 @@
     </style>
 </head>
 <body>
-    <header>We're really sorry for your bad experience</header>
+    <header>We're really sorry for your unfortunate experience</header>
     <br>
-    <h3>Play a short game to earn more store credit</h3>
+    <h3>Answer a short questionnaire to earn bonuses and redeem store credit</h3>
     <br>
-    <button class="button-primary" onclick="window.location.href='pruebaJS/index.html'">Game&Win</button>
+    <button class="button-primary" onclick="window.location.href='gameparkour.html'">Quiz&Earn</button>
     <br>
     <button class="button-secondary" onclick="window.location.href='page5.html'">Skip</button>
 </body>
